<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="installation_status"
        app:title="@string/installation_status_title"
        app:summary="@string/installation_status_summary"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="donations"
        app:title="@string/donations_title"
        app:summary="@string/donations_summary"
        app:iconSpaceReserved="false" />

    <PreferenceCategory app:title="@string/privacy_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="disable_camera"
            app:title="@string/disable_camera_title"
            app:summary="@string/disable_camera_description"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="hide_screenshot"
            app:title="@string/hide_screenshot_title"
            app:summary="@string/hide_screenshot_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="hide_save_gallery"
            app:title="@string/hide_save_gallery_title"
            app:summary="@string/hide_save_gallery_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="hide_bitmoji_presence"
            app:title="@string/hide_bitmoji_presence_title"
            app:summary="@string/hide_bitmoji_presence_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="hide_typing"
            app:title="@string/hide_typing_title"
            app:summary="@string/hide_typing_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="hide_friends"
            app:title="@string/hide_friends_title"
            app:summary="@string/hide_friends_description"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="hidden_friends"
            app:title="@string/hidden_friends_title"
            app:dialogMessage="@string/hidden_friends_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="hide_snap_views"
            app:title="@string/hide_snap_views_title"
            app:summary="@string/hide_snap_views_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="hide_story_views"
            app:title="@string/hide_story_views_title"
            app:summary="@string/hide_story_views_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="hide_story_views_local"
            app:title="@string/hide_story_views_local_title"
            app:summary="@string/hide_story_views_local_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="disable_metrics"
            app:title="@string/disable_metrics_title"
            app:summary="@string/disable_metrics_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="hide_read"
            app:title="@string/hide_read_title"
            app:summary="@string/hide_read_description"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="hide_save"
            app:title="@string/hide_save_title"
            app:summary="@string/hide_save_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="dont_release"
            app:title="@string/dont_release_messages_title"
            app:summary="@string/dont_release_description"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/tweaks_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="save_any"
            app:title="@string/save_any_title"
            app:summary="@string/save_any_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="allow_pin_chats"
            app:title="@string/allow_pin_chats_title"
            app:summary="@string/allow_pin_chats_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="block_ads"
            app:title="@string/block_ads_title"
            app:summary="@string/block_ads_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="disable_spotlight"
            app:title="@string/disable_spotlight_title"
            app:summary="@string/disable_spotlight_description"
            app:iconSpaceReserved="false" />

        <MultiSelectListPreference
            app:key="disable_story_sections"
            app:title="@string/disable_story_sections_title"
            app:summary="@string/disable_story_sections_summary"
            app:entries="@array/story_sections"
            app:entryValues="@array/story_sections_values"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="disable_bitmojis"
            app:title="@string/disable_bitmojis_title"
            app:summary="@string/disable_bitmojis_description"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="preview_messages_count"
            app:title="@string/preview_messages_count_title"
            app:summary="@string/preview_messages_count_description"
            app:iconSpaceReserved="false"
            app:defaultValue="5" />

        <EditTextPreference
            app:key="audio_playback_speed"
            app:title="@string/audio_playback_speed_title"
            app:summary="@string/audio_playback_speed_description"
            app:iconSpaceReserved="false"
            app:defaultValue="1.0" />

        <SwitchPreferenceCompat
            app:key="auto_save_all_chats"
            app:title="@string/auto_save_all_chats_title"
            app:summary="@string/auto_save_all_chats_description"
            app:iconSpaceReserved="false" />

        <MultiSelectListPreference
            app:key="auto_save_types"
            app:title="@string/auto_save_types_title"
            app:summary="@string/auto_save_types_description"
            app:entries="@array/auto_save_types"
            app:entryValues="@array/auto_save_types_values"
            app:iconSpaceReserved="false"
            app:defaultValue="@array/auto_save_types_defaults" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/snaps_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="override_snap"
            app:title="@string/send_gallery_as_snaps_title"
            app:summary="@string/override_snap_description"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="override_snap_timer"
            app:title="@string/gallery_snap_time_title"
            app:summary="@string/override_snap_timer_description"
            app:iconSpaceReserved="false"
            app:defaultValue="0" />

        <SwitchPreferenceCompat
            app:key="allow_save_snaps"
            app:title="@string/allow_save_snaps_title"
            app:summary="@string/allow_save_snaps_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="bypass_video_length_restrictions"
            app:title="@string/bypass_video_length_restrictions_title"
            app:summary="@string/bypass_video_length_restrictions_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="unlimited_snap_duration"
            app:title="@string/unlimited_snap_duration_title"
            app:summary="@string/unlimited_snap_duration_description"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/downloads_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="allow_download_stories"
            app:title="@string/allow_download_stories_title"
            app:summary="@string/allow_download_stories_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="allow_download_public_dp"
            app:title="@string/allow_download_public_dp_title"
            app:summary="@string/allow_download_public_dp_description"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="public_dp_resolution"
            app:title="@string/public_dp_resolution_title"
            app:summary="@string/public_dp_resolution_description"
            app:iconSpaceReserved="false"
            app:defaultValue="500" />

        <EditTextPreference
            app:key="download_path_story"
            app:title="@string/download_path_story_title"
            app:summary="@string/download_path_story_description"
            app:defaultValue="$Movies/SnapMod/%u_story_%d"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="download_path_audio_note"
            app:title="@string/download_path_audio_note_title"
            app:summary="@string/download_path_audio_note_description"
            app:defaultValue="$Movies/SnapMod/%id_audio_%d"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="download_path_profile"
            app:title="@string/download_path_profile_title"
            app:summary="@string/download_path_profile_description"
            app:defaultValue="$Movies/SnapMod/%u_profile_%d"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="enable_custom_snap_download_path"
            app:title="@string/enable_custom_snap_download_path_title"
            app:summary="@string/enable_custom_snap_download_path_description"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="download_path_snap"
            app:title="@string/download_path_snap_title"
            app:summary="@string/download_path_snap_description"
            app:defaultValue="$Movies/SnapMod/%u_snap_%d"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="download_date_format"
            app:title="@string/download_date_format_title"
            app:summary="@string/download_date_format_description"
            app:defaultValue="dd-MM-yyyy_HH:mm:ss"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="use_android_download_manager"
            app:title="@string/use_android_download_manager_title"
            app:summary="@string/use_android_download_manager_description"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="location_share_override"
            app:title="@string/location_share_override_title"
            app:summary="@string/location_share_override_description"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="location_share_lat"
            app:title="@string/location_share_lat_title"
            app:iconSpaceReserved="false"
            app:defaultValue="0" />

        <EditTextPreference
            app:key="location_share_long"
            app:title="@string/location_share_long_title"
            app:iconSpaceReserved="false"
            app:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/debug_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="more_profile_info"
            app:title="@string/more_profile_info_title"
            app:summary="@string/more_profile_info_description"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="log_network_requests"
            app:title="@string/log_network_requests_title"
            app:summary="@string/log_network_requests_description"
            app:iconSpaceReserved="false" />

        <MultiSelectListPreference
            app:key="global_log_level"
            app:title="@string/global_log_level_title"
            app:summary="@string/global_log_level_description"
            app:entries="@array/log_levels"
            app:entryValues="@array/log_levels_values"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/updates_header"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="update_frequency"
            app:title="@string/update_frequency_title"
            app:summary="@string/update_frequency_description"
            app:entries="@array/update_frequencies"
            app:entryValues="@array/update_frequencies_values"
            app:defaultValue="0"
            app:iconSpaceReserved="false" />

        <Preference app:key="check_for_updates"
            app:title="@string/check_for_updates_title"
            app:summary="@string/check_for_updates_description"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>